argocd/apps/heimdall/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: heimdall
  labels:
    name: heimdall
