argocd/apps/heimdall/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app: heimdall
spec:
  selector:
    matchLabels:
      app: heimdall
  replicas: 1 
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: lscr.io/linuxserver/heimdall:2.6.1 
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - mountPath: /config 
          name: config
        resources: {}
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
